Update the script with help message + readme.

--- a/README
+++ b/README
@@ -15,9 +15,12 @@ Those currently include ( - name (dependencies) - description):
  - c                    (git)           - a synonym for git commit
  - dcrawrecursive       (dcraw)         - runs dcraw -T recursively on every
                                           file in folders below and including current one
+ - cr22jpeg             (dcraw, imagemagick) - recursively converts all CR2 files into JPEG
  - dist-upgrade         (sudo, apt-get) - runs a repo update and distribution upgrade
  - fuck                 (fortunes)      - displays a fortune cookie when
                                           you are desperate enough to curse on terminal
+ - gitpush2gitoriousAndGithub (git)     - push a branch named in the first argument to both
+                                          gitorious and github. Requires remotes to be set up
  - grep_error           (grep)          - greps for errors (old script, needs review)
  - qt5compile           (qt5 sources)   - sets up the environment, cleans the source,
                                           configures and builds. Needs to be
