--- a/README
+++ b/README
@@ -20,6 +20,7 @@ Those currently include:
                                           gitorious and github. Requires remotes to be set up
  - grep_error           (grep)          - greps for errors (old script, needs review)
  - s                    (git)           - synonym for git status
+ - setCpuFrequency      (cpufrequtils)  - sets CPU frequency (all cores!) to a given value
  - updateQmlTo2.0       (sed)           - updates all files below current folder
                                           from Qml 1.0 to 2.0
  - upgrade              (sudo, apt-get) - performs a repo update and system upgrade
