--- a/README
+++ b/README
@@ -15,6 +15,8 @@ Those currently include:
  - fuck             (fortunes)       - displays a fortune cookie when
                                       you are desperate enough to curse on
                                       terminal
+ - linuxPostInstall                  - performs the usual steps I take after installing
+                                      Linux
  - s                (git|svn)        - synonym for git status or svn status
  - updateQmlVersion (sed)            - updates all files below current folder
                                       from one Qml version to another
